# celery_log_file

./: celery_app.py  main.py  model.py  notification.txt  pyproject.toml  tasks.py
