[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["EugeneSpiridonov <eugenespint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
fastapi = "^0.105.0"
redis = "^5.0.1"
celery = "^5.3.6"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
